add minify css and other things

--- a/index.html
+++ b/index.html
@@ -4,11 +4,267 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Css starter</title>
-  <link rel="stylesheet" href="/Css/normalize.css">
-  <link rel="stylesheet" href="/Css/styles.css">
+  <title>Job listing</title>
+  <!-- <link rel="stylesheet" href="/Css/normalize.css">
+  <link rel="stylesheet" href="/Css/styles.css"> -->
+  <link rel="stylesheet" href="/Css/style.min.css">
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <h1 class="visually-hidden">Job listings</h1>
+      <div class="site-header">
+        <img src="/img/header.svg" alt=" header img">
+      </div>
+  <!-- Main section -->
+  <main class="main-content">
+    <h2 class="visually-hidden">Job offers</h2>
+    <div class="container">
+      <ul class="job-items">
+        <li class="job-item border">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/photosnap.svg" alt="photosnap" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">Photosnap</div>
+              <div class="job-item-info-badges">
+                <span class="job-item-info-badge  badge-green">NEW!</span>
+                <span class="job-item-info-badge  badge-black">FEATURED</span>
+              </div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Senior Frontend Developer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">1d ago</li>
+                <li class="job-item-fact">Full time</li>
+                <li class="job-item-fact">Remote</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Frontend</li>
+              <li class="job-item-tag">Senior</li>
+              <li class="job-item-tag">HTML</li>
+              <li class="job-item-tag">CSS</li>
+              <li class="job-item-tag">JavaScript</li>
+            </ul>
+        </li>
+        <li class="job-item border">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/manage.svg" alt="manage" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">Manage</div>
+              <div class="job-item-info-badges">
+                <span class="job-item-info-badge  badge-green">NEW!</span>
+                <span class="job-item-info-badge  badge-black">FEATURED</span>
+              </div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Full Stack Developer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">1d ago</li>
+                <li class="job-item-fact">Part time</li>
+                <li class="job-item-fact">Remote</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Fullstack</li>
+              <li class="job-item-tag">Midweight</li>
+              <li class="job-item-tag">Python</li>
+              <li class="job-item-tag">React</li>
+            </ul>
+        </li>
+        <li class="job-item">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/Account.svg" alt="Account" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">Account</div>
+              <div class="job-item-info-badges">
+                <span class="job-item-info-badge  badge-green">NEW!</span>
+              </div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Junior Frontend Developer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">2d ago</li>
+                <li class="job-item-fact">Part time</li>
+                <li class="job-item-fact">Usa only</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Frontend</li>
+              <li class="job-item-tag">Junior</li>
+              <li class="job-item-tag">React</li>
+              <li class="job-item-tag">Sass</li>
+              <li class="job-item-tag">JavaScript</li>
+            </ul>
+        </li>
+        <li class="job-item">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/myhome.svg" alt="myhome" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">MyHome</div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Junior Frontend Developer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">5d ago</li>
+                <li class="job-item-fact">Contract</li>
+                <li class="job-item-fact">Usa only</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Frontend</li>
+              <li class="job-item-tag">Junior</li>
+              <li class="job-item-tag">Css</li>
+              <li class="job-item-tag">JavaScript</li>
+            </ul>
+        </li>
+        <li class="job-item">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/loop.svg" alt="loop" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">Facelt</div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Software Engineer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">1w ago</li>
+                <li class="job-item-fact">Full time</li>
+                <li class="job-item-fact">Worldwide</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Fullstack</li>
+              <li class="job-item-tag">Midweight</li>
+              <li class="job-item-tag">JavaScript</li>
+              <li class="job-item-tag">Sass</li>
+              <li class="job-item-tag">Ruby</li>
+              
+            </ul>
+        </li>
+        <li class="job-item">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/Facelt.svg" alt="Facelt" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">Facelt</div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Junior Backend Developer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">2w ago</li>
+                <li class="job-item-fact">Full time</li>
+                <li class="job-item-fact">Uk only</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Backend</li>
+              <li class="job-item-tag">Junior</li>
+              <li class="job-item-tag">Rub</li>
+              <li class="job-item-tag">RoR</li>
+            </ul>
+        </li>
+        <li class="job-item">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/shortly.svg" alt="shortly" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">Shortly</div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Junior Developer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">2w ago</li>
+                <li class="job-item-fact">Full time</li>
+                <li class="job-item-fact">Worlwide</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Fullstack</li>
+              <li class="job-item-tag">Junior</li>
+              <li class="job-item-tag">HTML</li>
+              <li class="job-item-tag">Sass</li>
+              <li class="job-item-tag">JavaScript</li>
+            </ul>
+        </li>
+        <li class="job-item">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/insure.svg" alt="insure" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">Insure</div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Junior Frontend Developer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">2w ago</li>
+                <li class="job-item-fact">Full time</li>
+                <li class="job-item-fact">Usa only</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Frontend</li>
+              <li class="job-item-tag">Junior</li>
+              <li class="job-item-tag">Vue</li>
+              <li class="job-item-tag">JavaScript</li>
+              <li class="job-item-tag">Sass</li>
+            </ul>
+        </li>
+        <li class="job-item">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/eyecam.svg" alt="eyecam" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">Eyecam Co.</div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Full Stack Engineer</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">3w ago</li>
+                <li class="job-item-fact">Full time</li>
+                <li class="job-item-fact">Worldwide</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Fullstack</li>
+              <li class="job-item-tag">Midweight</li>
+              <li class="job-item-tag">JavaScript</li>
+              <li class="job-item-tag">Django</li>
+              <li class="job-item-tag">Python</li>
+            </ul>
+        </li>
+        <li class="job-item">
+          <div class="job-item-cage">
+            <div class="job-item-img-wrapper"><img src="/img/Air.svg" alt="Air" class="job-item-img"></div>
+            <div class="job-item-info">
+              <div class="job-item-info-name">The Air Filter Company</div>
+              <h3 class="job-item-info-degre">
+                <a class="job-item-info-degre-link" href="#">Front-end Dev</a>
+              </h3>
+              <ul class="job-item-facts">
+                <li class="job-item-fact">1mo ago</li>
+                <li class="job-item-fact">Part time</li>
+                <li class="job-item-fact">Worldwide</li>
+              </ul>
+            </div>
+          </div>
+            <ul class="job-item-tags">
+              <li class="job-item-tag">Frontend</li>
+              <li class="job-item-tag">Junior</li>
+              <li class="job-item-tag">React</li>
+              <li class="job-item-tag">Sass</li>
+              <li class="job-item-tag">JavaScript</li>
+            </ul>
+        </li>
+      </ul>
+    </div>
+  </main>
   <script src="/js/main.js"></script>
 </body>
 </html>
